# aijolot-banner-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md
backend/: docker-entrypoint.sh  pyproject.toml
backend/adk_agents/banner_coordinator/: __init__.py  agent.py
backend/app/: main.py
backend/app/agents/: __init__.py  coordinator.py  graph.py  pipeline.py  pipeline_runner.py  skill_agent.py  state.py  state_bridge.py
backend/app/api/: brands.py  campaigns.py  intake.py
backend/app/core/: auth.py  dependencies.py  i18n.py  settings.py
backend/app/schemas/: approvals.py  art_concepts.py  art_direction.py  art_prompts.py  backgrounds.py  brand.py  brand_discovery.py  brand_recommendations.py  campaign.py  catalog.py  creative_mode.py  decision_trace.py  generation.py  palette_suggestions.py  performance.py  placement_plan.py  placements.py  refinement.py  schedules.py  stores.py  suggestions.py  typography.py
backend/app/services/: brand_store.py  campaign_store.py
backend/app/workflows/: __init__.py  banner_creation.py
backend/scripts/: e2e_real_publish.py
backend/tests/: conftest.py
backend/tests/api/: test_api_v1_contract.py  test_approvals.py  test_art_direction.py  test_auth_boundaries.py  test_brand_discovery.py  test_brands.py  test_calendar.py  test_campaigns.py  test_catalog_snapshot.py  test_demo_scripts.py  test_generation_runs.py  test_intake.py  test_performance.py  test_placements.py  test_previews.py  test_publishing.py  test_regeneration.py  test_schedules.py  test_stores.py  test_suggestions.py
(+444 files in other folders)
