[project]
name = "aijolot-banner-agent-backend"
version = "0.1.0"
description = "FastAPI bridge between the React UI and the ADK banner-agent graph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sse-starlette>=2.1",
    "google-adk>=0.1",
    "google-genai>=0.3",
    "supabase>=2.5",
    "pillow>=10.0",
    "pillow-avif-plugin>=1.4",
    "jinja2>=3.1",
    "html5validator>=0.4",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["app*", "adk_agents*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: tests that require optional local/external services",
]
